--- a/.github/workflows/lint-test.yaml
+++ b/.github/workflows/lint-test.yaml
@@ -1,66 +1,10 @@
 name: Lint and Test Charts
 
 on:
-  pull_request:
-    paths:
+  push:
 jobs:
-  changes:
-    runs-on: ubuntu-latest-low
-
-    outputs:
-      src: ${{ steps.changes.outputs.src}}
-
-    steps:
-      - uses: dorny/paths-filter@de90cc6fb38fc0963ad72b210f1f284cd68cea36 # v3.0.2
-        id: changes
-        continue-on-error: true
-        with:
-          filters: |
-            src:
-              - 'charts/nextcloud/Chart.yaml'
-              - 'charts/nextcloud/values.yaml'
-              - 'charts/nextcloud/templates/**'
-
-  lint:
-    runs-on: ubuntu-latest-low
-    needs: changes
-    if: needs.changes.outputs.src != 'false'
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-        with:
-          fetch-depth: 0
-
-      - name: Install Helm
-        uses: azure/setup-helm@v4
-        with:
-          version: v3.14.4
-
-      - name: Add dependency chart repos
-        run: |
-          helm repo add bitnami https://charts.bitnami.com/bitnami
-
-      - name: Set up chart-testing
-        uses: helm/chart-testing-action@v2.6.1
-
-      - name: Run chart-testing (list-changed)
-        id: list-changed
-        run: |
-          changed=$(ct list-changed --target-branch ${{ github.event.repository.default_branch }})
-          if [[ -n "$changed" ]]; then
-            echo "changed=true" >> "$GITHUB_OUTPUT"
-          fi
-
-      - name: Run chart-testing (lint)
-        id: lint
-        if: steps.list-changed.outputs.changed == 'true'
-        run: ct lint --target-branch ${{ github.event.repository.default_branch }}
-
   test:
     runs-on: ubuntu-22.04
-    needs: [changes, lint]
-    # only run this job if there are helm chart file changes
-    if: needs.changes.outputs.src != 'false'
     strategy:
       # continue with all the other jobs even if one fails
       fail-fast: false
@@ -150,11 +94,3 @@ jobs:
             kubectl logs --tail=-1 -f -l batch.kubernetes.io/job-name=create-nextcloud-file && \
             echo "Here's the logs from the nextcloud pod:" && \
             kubectl logs -l app.kubernetes.io/name=nextcloud
-
-  summary:
-    runs-on: ubuntu-latest-low
-    needs: [changes, test]
-    if: always()
-    steps:
-      - name: Summary
-        run: if ${{ needs.changes.outputs.src != 'false' && needs.test.result != 'success' }}; then exit 1; fi
